--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -6,9 +6,18 @@ $gray: #9d9d9d;
 $offwhite: #f5f4f4;
 $hcolor: #252525;
 $navy: #062f45;
-$blue: #2f5a72;
+$blue: #0060af;
 $br-blue: #00aeff;
+$blue2: #0060af;
+$tan: #dbd3c7;
 
 $open: 'Open Sans', Arial, sans-serif;
 $cinzel: 'Cinzel', serif;
 $lato: 'Lato', sans-serif;
+
+$sec-padding: 55px 0;
+$fullsec-padding: 55px 75px;
+
+
+// 0478bb
+// 0060af
