--- a/app/views/static_pages/18wheeler-accidents.html.erb
+++ b/app/views/static_pages/18wheeler-accidents.html.erb
@@ -1,33 +1,58 @@
 <% @page_title = "18-Wheeler Accidents" %>
 <% @page_description = "New Subject" %>
 
+<div class="truck-claims">
+		<div class="cst-header">
+			<div class="title-box">
+				<!-- <h4>Noel B. Leonard</h4> -->
+				<h1>18-Wheeler Accident Claims</h1>
+			</div>
+		</div>
 
-	Claims Against the Driver
-  Claims Against the Trucking Company
-  Faulty Equipment or Safety Violation Claims
-  Hazardous Material &amp; Dangerous Cargo Claims
+		<!-- 	Claims Against the Driver
+		  Claims Against the Trucking Company
+		  Faulty Equipment or Safety Violation Claims
+		  Hazardous Material &amp; Dangerous Cargo Claims -->
 
-Foley Alabama Truck Accident Attorney
-While all vehicles on Alabama roads can be deadly if they are defective or driven negligently, 18 wheelers are in a class all their own.
-If an ordinary car is analogous to the danger of a bullet, then an 18 wheeler is a missile.
+	<div class="main-content less">
+		<div class="container">
+			<div class="col-md-8">
+				<p>While all vehicles on Alabama roads can be deadly if they are defective or driven negligently, 18 wheelers are in a class all their own.
+				If an ordinary car is analogous to the danger of a bullet, then an 18 wheeler is a missile. 18 Wheelers are hulking, unwieldy vehicles that can — and do — wreak inordinate amounts of havoc on Alabama roads. For this reason, accidents involving 18 wheelers often lead to serious injury and death.</p>
 
-These large, hulking behemoths are unwieldy vehicles that can — and do — wreak inordinate amounts of havoc on Alabama roads. For this reason, accidents involving large 18 wheelers often lead to serious injury and death.
-When drivers operate these vehicles negligently, they need to be held accountable. And, while driver negligence is often a major factor in 18 wheeler accidents, negligence is not the sole reason for 18 wheeler accidents.
-Defective and faulty equipment can also be the reason for a devastating 18 wheeler accident. In other cases, hazardous materials and cargo on the truck itself can be the cause of the issue.
-These factors lead to one simple truth: 18 wheeler litigation can grow in complexity quickly. That is why it is essential for Alabama 18 wheeler victims to receive legal assistance for their Alabama accident.
-This requires an attorney who is familiar with both state and federal law. Alabama trucking companies are required to comply with federal safety regulations that are meant to enhance the safety of Alabama roads and the citizens who drive on them.
-If any of these federal regulations are violated, you may be entitled to file a lawsuit against the trucking company even if the driver did not behave negligently. Noel B. Leonard has the experience necessary to determine whether such a violation occurred.
-Noel B. Leonard Will Fight to Get You the Compensation and Justice You Deserve
+				<p>When drivers operate 18 wheelers negligently, they need to be held accountable. However, while driver negligence is often a major factor in these accidents, it is not the sole reason they occur.</p>
 
-In short, Noel B. Leonard has successfully represented 18 wheeler accident victims when pursuing claims against the following:
-	Drunk Drivers
-	Negligent Drivers
-	Claims Against the Trucking Company
-	Claims Against Auto Manufacturers and Their Defective Equipment
-	Federal Safety Violation Claims
-	Hazardous Material Claims
-	Dangerous Cargo Claims
-	And More
+				<p>Defective and faulty equipment can also be the reason for a devastating 18 wheeler accident. In other cases, hazardous materials and cargo on the truck itself can be the cause of the issue. These factors lead to one simple truth: 18 wheeler litigation can grow in complexity quickly. That is why it is essential for Alabama 18 wheeler victims to receive legal assistance for their Alabama accident.</p>
 
-If you live in Mobile, Baldwin or Escambia County, Foley attorney Noel B. Leonard is ready to pursue justice on your behalf or the behalf of a dearly departed loved one. Receive the settlement you deserve to receive the healing you need by contacting Noel B. Leonard for a legal consultation to discuss the facts of your 18 wheeler accident case.
-Call us now to schedule a consultation (251) 943-8638 or fill in our Case Evaluation Form and we will contact you as soon as possible.
+				<p>This requires an attorney who is familiar with both state and federal law. Alabama trucking companies are required to comply with federal safety regulations that are meant to enhance the safety of both the roads and the citizens who drive on them. If any of these federal regulations are violated, you may be entitled to file a lawsuit against the trucking company, even if the driver did not behave negligently. Noel B. Leonard has the experience necessary to determine whether such a violation occurred.</p>
+
+				<h4>Noel B. Leonard Will Fight to Get You the Compensation and Justice You Deserve</h4>
+				In short, Noel B. Leonard has successfully represented 18 wheeler accident victims when pursuing claims against the following:
+					Drunk Drivers
+					Negligent Drivers
+					Claims Against the Trucking Company
+					Claims Against Auto Manufacturers and Their Defective Equipment
+					Federal Safety Violation Claims
+					Hazardous Material Claims
+					Dangerous Cargo Claims
+					And More
+
+				<div class="clearfix"></div><br>
+			</div>
+
+			<div class="claim-info-scroll noscroll">
+				<p>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18 wheeler accident, Foley attorney, Noel B. Leonard is ready to pursue justice on behalf of you or a dearly departed loved one.</p>
+				<p>Contact Noel B. Leonard now, to schedule a legal consultation. Discuss the facts of your 18 wheeler accident case, and receive the settlement you deserve to begin the healing you need. </p>
+				<p>Call us today (251) 943-8638, or fill out our Case Evaluation Form, and we will contact you as soon as possible.</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
