--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,27 +1,46 @@
 <% @page_title = "About Us" %>
 <% @page_description = "New Subject" %>
 
+<div class="cst-header">
+	<h1>About Noel B. Leonard</h1>
+	<h3>Providing Excellent Legal Services in Southern Alabama</h3>
+</div>
 
+<div class="main-content">
+	<div class="body">
+			Providing Excellent Legal Services in Southern Alabama
+			<br>
+			Noel B. Leonard, Attorney LLC is a Foley Alabama based law firm representing clients in Mobile, Baldwin and Escambia counties for the following types of claims:
+			<br>
+			Auto Accidents &amp; Auto Injury
+			<br>
+			18-Wheeler Accidents &amp; Injury
+			<br>
+			Personal Injury Claims
+			<br>
+			Contact Noel B. Leonard to schedule a consultation  (251) 943-8638 or fill in our Case Evaluation Form and we will contact you as soon as possible.
+			<br>
+			What We Can Do For You
+			<br>
 
-Providing Excellent Legal Services in Southern Alabama
-Noel B. Leonard, Attorney LLC is a Foley Alabama based law firm representing clients in Mobile, Baldwin and Escambia counties for the following types of claims:
-Auto Accidents &amp; Auto Injury
-18-Wheeler Accidents &amp; Injury
-Personal Injury Claims
-Contact Noel B. Leonard to schedule a consultation  (251) 943-8638 or fill in our Case Evaluation Form and we will contact you as soon as possible.
-What We Can
-Do For You
+			Provide free telephone and office consultation
+			<br>
+			Accommodate evening and weekend appointments
+			<br>
+			Provide superior representation for all your legal concerns
+			<br>
+			Ensure first-class client service and personalized attention
+			<br>
+			Defend you against claims brought against you
+			<br>
+			Advance your expenses
+			<br>
+			Maximize your recovery
+			<br>
+			We are committed to giving back to our local community.
+			<br>
 
-Provide free telephone and office consultation
-Accommodate evening and weekend appointments
-Provide superior representation for all your legal concerns
-Ensure first-class client service and personalized attention
-Defend you against claims brought against you
-Advance your expenses
-Maximize your recovery
-We are committed to giving back to our local community.
-
-We currently support the following charitable organizations.
-
-
-st-judes-childrens-hospital
+			We currently support the following charitable organizations.
+			<br>
+	</div>
+</div>
