--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,31 +1,91 @@
 <% @page_title = "Noel Leonard, Foley Attorney" %>
 <% @page_description = "Noel B. Leonard is a Foley Alabama injury attorney for personal injury, auto accidents, and 18 wheeler crashes in Baldwin, Mobile, and Escambia Counties." %>
 
-			Our firm ensures that victims of an automotive accident receive proper compensation for personal injuries sustained during the accident, post-medical needs and rehabilitation, as well as property damages to vehicles, dwellings, and or businesses.
+<section class="site-intro">
+	<div class="overlay">
+		<div class="title-block">
+      <h1>Noel B. Leonard</h1>
+      <h2>Attorney, LLC</h2>
+      <h4>Committed to Providing Excellent Legal Service Within the State of Alabama</h4>
+			<!-- <span>"Accidents happen...but finding the right attorney doesn't happen by accident."</span> -->
+    </div>
+	</div>
+</section>
 
-			Whether the cause of the accident is driver fatigue or error, equipment failure, shifting or falling cargo, improper training or any other negligent action by the driver or carrier, we will help you and your family get through the trying times.
+<section class="practice-areas">
+	<h3>Foley Injury Attorney, Noel B. Leonard, is devoted to serving <b>Baldwin</b>, <b>Mobile</b>, and <b>Escambia Counties</b>. <br>
+		<span>Practice areas include but are not limited to:</span>
+	</h3>
 
-			Every person who has suffered a personal injury deserves the time and dedication our law firm can provide, in order to make sure you are compensated for your legitimate physical and financial pain and suffering.
+	<div class="practice-box bike">
+		<h4>Motorcyle Accident Injury Claims</h4>
+		<div class="title-line"></div>
+		<p>Every person who has suffered a personal injury deserves the time and dedication our law firm can provide, in order to make sure you are compensated for your legitimate physical and financial pain and suffering.</p>
+	</div>
+
+	<div class="practice-box auto">
+		<h4>Auto Accident Injury Claims</h4>
+		<div class="title-line"></div>
+		<p>Our firm ensures that victims of an automotive accident receive proper compensation for personal injuries sustained during the accident,
+		post-medical needs and rehabilitation, as well as property damages to vehicles, dwellings, and or businesses.</p>
+	</div>
+
+	<div class="practice-box trucker">
+		<h4>18-Wheeler Accident Victims</h4>
+		<div class="title-line"></div>
+		<p>Whether the cause of the accident is driver fatigue or error, equipment failure, shifting or falling cargo, improper training or any other negligent action by the driver or carrier, we will help you and your family get through the trying times.</p>
+	</div>
 
 
-Foley Alabama Injury Attorney
-Noel B. Leonard
-Committed to Providing Excellent Legal Service Within the State of Alabama
+	</div>
+</section>
 
-"Accidents happen...but finding the right attorney doesn't happen by accident."
-If you are the victim of a serious personal injury, auto accident injury or 18-wheeler accident injury in Baldwin, Mobile, or Escambia County, Foley injury attorney Noel B. Leonard can help.
+<section class="home-sec1">
+	<div class="info-top">
+		<h3>Noel B. Leonard Attorney, LLC</h3>
+		<h4>"Accidents happen...but finding the right attorney doesn't happen by accident."</h4>
+		<%=image_tag('noel-symbol.png', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive symbol') %>
+		<!-- <p>Noel B. Leonard Attorney, LLC, employs a knowledgeable legal staff, capable of addressing any legal concerns you may have. If you are the victim of a serious injury from a motorcycle, auto, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel B. Leonard Attorney, LLC can help.</p> -->
+	</div>
 
-Noel's firm will evaluate your case, help file your claim, and make every effort to see that you receive proper compensation for your injuries and all other damages sustained during the accident.
+	<div class="info-box">
+		<div class="container">
+			<div class="col-md-7">
+				<div class="text">
+					 <p>Noel B. Leonard Attorney, LLC, employs a knowledgeable legal staff, capable of addressing any legal concerns you may have. If you are the victim of a serious injury from a motorcycle, auto, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel B. Leonard Attorney, LLC can help.</p>
+					<p>Noel's firm will evaluate your case, help file your claim, and make every effort to see that you receive proper compensation for your injuries, and all other damages sustained during the accident.
+					</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<%=image_tag('noel-leonard.jpg', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive') %>
+			</div>
+			<div class="clearfix"></div>
 
-Noel B. Leonard Attorney, LLC employs a knowledgeable legal staff capable of addressing any legal concerns you may have.
+			<div class="video-row">
+				<iframe class="one" src="https://www.youtube.com/embed/7Ax8NAhosgo" frameborder="0" allowfullscreen></iframe>
+				<iframe class="two" src="https://www.youtube.com/embed/5at_QmbdWAQ" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
+</section>
 
+
+
+
+<!--
 Our practice areas include but are not limited to:
 AUTO ACCIDENT INJURY CLAIMS
 18 WHEELER ACCIDENT VICTIMS
 PERSONAL INJURY CLAIMS
-
-<!--
-<a rel="wp-video-lightbox" href="https://www.youtube.com/watch?v=7Ax8NAhosgo&amp;width=850&amp;height=500" title=""><img src="http://www.attorney-leonard.com/wp-content/uploads/2015/06/video1.png" class="video_lightbox_anchor_image" alt="" /></a>
-
-<a rel="wp-video-lightbox" href="https://www.youtube.com/watch?v=5at_QmbdWAQ&amp;width=850&amp;height=500" title=""><img src="http://www.attorney-leonard.com/wp-content/uploads/2015/06/video21.png" class="video_lightbox_anchor_image" alt="" /></a>
  -->
+<!--
+
+ -->
+
+
+
+
+
+
+
