--- a/app/views/static_pages/motorcycle-accidents.html.erb
+++ b/app/views/static_pages/motorcycle-accidents.html.erb
@@ -1,2 +1,34 @@
 <% @page_title = "Motorcycle Accidents" %>
 <% @page_description = "New Subject" %>
+
+
+<div class="header-wrap">
+	<div class="cst-header">
+		<h1><span>Motorcycle</span> Accident Claims</h1>
+		<!-- <h4>Motorcycle Accident Claims &amp; Serious Injuries in Southern Alabama</h4> -->
+	</div>
+</div>
+
+<section class="main-content">
+	<h5>Motorcycle Accident Claims &amp; Serious Injuries in Southern Alabama</h5>
+
+	<div class="col-md-6">
+		<p>Motorcycles are the least protected vehicles on the road, which unfortunately leads to higher injury and death rates than those of traditional motorists. Motorcycle accidents typically result in high medical costs, and demand a successful litigation outcome in order to pay for medical expenses.</p>
+
+		<p>Noel B. Leonard affirms that attorney fees will not exceed the amount awarded from a successful lawsuit, thus ensuring that you have the funds needed to repair your body and your life.</p>
+	</div>
+
+	<div class="col-md-6">
+		<h4>As an avid motorcycle enthusiast, Noel B. Leonard understands firsthand how important motorcycle safety is.</h4>
+		<p>We counsel all motorcyclists to wear a helmet, and follow essential safety precautions on the road, as there are many dangerous and negligent drivers out there.
+			In the event that you are in an accident caused by a negligent driver, it is essential that you have as much protection as possible, to prevent life-threatening injuries.
+			While a helmet is no guarantee that a life will be saved, in many cases a helmet has been the difference between life and death.
+		</p>
+	</div>
+
+		<p>If you or a loved one has been in a devastating motorcycle accident, you need an Alabama accident attorney who understands your pain and suffering, while delivering the legal results you need to be made whole. In the turbulent aftermath of a devastating motorcycle accident, you need an attorney you can trust to fight for you.</p>
+
+		<h5>Contact Alabama accident attorney, Noel B. Leonard to schedule a consultation, or call (251) 597-0695 if you live in the city of Foley or Baldwin, Mobile or Escambia Counties, and have been in a motorcycle accident.</h5>
+	</div>
+
+</section>
