--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -16,6 +16,12 @@
     background-size: 100%;
 }
 
+@mixin sec-bghlf ($pos) {
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: $pos;
+}
+
 @mixin sec-parallax () {
 	background-repeat: no-repeat;
     background-position: top left;
@@ -38,6 +44,8 @@
     position: absolute;
     top: 0;
     width: 100%;
+    height:100%;
+    z-index: -1;
 }
 
 @mixin ease() {
