--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,36 +1,40 @@
 @import "variables";
 @import "mixins";
 
-header {@include sec-default();background-color: $navy;}
+header {@include sec-default();background-color: lighten($blue, 62%);}
 
-#top-bar {  @include sec-default(); background-color: $black; padding: 5px 80px 0;
-  .social-links, .block2, .block3 {display: inline-block;}
+#top-bar {  @include sec-default(); background-color: $blue; padding: 5px 70px 0;
+  .block1, .block-2, .block3 {display: inline-block;padding-top: 5px; width: 33%;}
   h4, h5 {color: $white; }
   h5 {font-size: 14px; margin: 5px 0 0; line-height: 1em;}
 }
-.social-links {float: left; padding-top: 5px;
-  li {display: inline-block; a { display: inline-block; margin-right: 3px;background-color: $br-blue; border-radius: 50%; width:25px; height: 25px; padding-top:1px; text-align: center; transition: all 0.3s ease 0s; color: $black; font-size: 17px;
-    &:hover {color: white;}}
+.block-2 {float: right; h5 {float: right; color: $white;}}
+
+.block3 {float: left; color: $white;}
+.block1 {float: none; text-align: center;}
+.social-links { float: right;
+  li { display: inline-block; margin-right:5px;
+    a { background-color: transparent; color: $white; font-size: 15px;
+      &:hover {color: white;}
+    }
   }
 }
-.block2 { position: absolute; width: 45%; padding: 5px; text-align: center; margin-left: 5%; border-radius: 0 0 10px 10px;
-  background: -webkit-linear-gradient(-180deg, rgba($navy, .99), rgba($black, .8));
-  background: linear-gradient(-180deg, rgba($navy, .99), rgba($black, .8));
-}
-.block3 {float: right; padding-top: 5px; }
 
-.main-header {@include sec-default(); padding:15px 75px 10px;
-  background: -webkit-linear-gradient(-180deg, rgba($navy, .95), rgba($black, .7));
-  background: linear-gradient(-180deg, rgba($navy, .95), rgba($black, .7));
+.main-header {@include sec-default(); padding: 10px 75px 0;}
+.logo-block {display: inline-block; float: left; width: 15%;
+  .logo-img {height:80px; padding:5px; }
 }
-.esp-block, .logo-block {display: inline-block; }
-.logo-block {img, h2 {display: inline-block; color:$white;}}
-.esp-block{float: right;}
-
-.mega-tab {list-style:none; margin-top: 15px; text-align: center;
+.main-block {display: inline-block; float: none; width: 80%; margin-left: 4%; text-align: center;
+  h4 {display: inline-block; margin-left: 7%; float: none; color: $dark; font-weight: bold;}
+  .esp-link {color: $dark; font-weight: bold;}
+    // background-color: lighten($blue, 50%); padding: 5px; border-radius: 5px; margin-top:5px;
+}
+.mega-tab {list-style:none; margin-top: 15px;
+  text-align: center; float: left;
   li{display:inline-block; margin: 0 15px;
       &:last-child{margin-right: 5px;}
-      a{ font-size: 15px; color: $white; text-transform: uppercase; padding-top:10px; }
+      &:first-child{margin-left: 0px;}
+      a{ font-size: 15px; color: $blue; text-transform: uppercase; padding-top:10px; }
   }
 
   .dropdown{width:auto;margin:0;margin-top:-1px;position:absolute;z-index:999;display:none;}
@@ -85,7 +89,8 @@ header {@include sec-default();background-color: $navy;}
           li { margin-bottom:15px; padding-bottom:5px; padding-left: 15px; border-bottom:1px solid rgba($white, .4);
               a { -webkit-transition:300ms; -o-transition:300ms; transition:300ms; padding:7px 0; padding-left:0px; color: $white; font-size: 14px; line-height: 1.5em;}
               a:hover{background:transparent;}
-              &:first-child{margin-top:0}            }
+              &:first-child{margin-top:0}
+          }
       }
   }
 }
@@ -107,3 +112,4 @@ h3.module-title{color: $white;}
   #offcanvas-toggler { display:inline-block; }
   nav {display: none;}
 }
+
