--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -34,7 +34,7 @@
       </ul>
       <h5>218 N. Alston Street | Foley, AL 36535</h5>
 
-    <div class="logo-footer"><%= link_to(image_tag( 'logo-nbl.png', alt: 'Noel Leonard Attorney - Logo', class: 'img-responsive ftlogo-img'), root_path ) %></div>
+    <!-- <div class="logo-footer"><%= link_to(image_tag( 'logo-nbl.png', alt: 'Noel Leonard Attorney - Logo', class: 'img-responsive ftlogo-img'), root_path ) %></div> -->
 </footer>
 
 
